# Carme

./: .gitignore  CarmeConfig.repo  CarmeConfig_blanco  INSTALL-WSL.md  Licence.txt  README.md  cleanCarmeConfig.sh  config.sh  create-new-carmeconfig-blanco.sh  deploy-carmeconfig.sh  deployCarmeConfig.sh  end.sh  result  start.sh  variables.conf
Carme-Backend/: .gitignore
Carme-Backend/Python/: .gitignore  README.md  carme_backend.py  pyproject.toml  setup.py
Carme-Backend/Python/build.bak.2/scripts-3.9/: carme-backend
Carme-Backend/Python/carme_backend/: server.py
Carme-Backend/Python/dist.bak.2/: carme_backend-0.9.5-py3-none-any.whl
Carme-Backend/Python/src/carme_backend/: server.py  server.py.old
Carme-Backend/Python/src/carme_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Carme-ContainerImages/: CARME-Base-Image.recipe  Carme-Baseimage.recipe  README.md  carme-add-software-to-baseimage.sh  example_libs_to_add.txt
Carme-Frontend/: .gitignore
Carme-Install/: basic_functions.sh  install_backend.sh  install_base.sh  install_certs.sh  install_database.sh  install_frontend.sh  install_ldap.sh  install_proxy.sh  install_scripts.sh  install_slurm.sh  install_system.sh  install_vendors.sh  remove_backend.sh  remove_base.sh  remove_certs.sh  remove_database.sh  remove_frontend.sh  remove_ldap.sh  remove_proxy.sh  remove_slurm.sh  remove_vendors.sh
Carme-Proxy/: .gitignore
Carme-Scripts/: .gitignore  README.md  carme-basic-bash-functions.sh
docs/: CNAME  CarmeDown.md  LICENSE.md  README.md  _config.yml  message.md
(+358 files in other folders)
